Align items on homepage,fix z-index and background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,20 +27,24 @@ footer {
   position: relative;
   overflow: hidden;
   background-color: black;
+  height: 100vh;
+  width: 100vw;
+  opacity: .9;
 }
 .jumbotron video {
   position: absolute;
-  z-index: 1;
+  z-index: -1;
   top: 0;
-  width: 100%;
+  width: 101vw;
   height: 100%;
   /*  object-fit is not supported on IE  */
   object-fit: cover;
-  opacity: 0.7;
+ 
 }
 .jumbotron .container {
   z-index: 2;
   position: relative;
+  width: 100vw;
 }
 
 .navbar {
@@ -89,6 +93,12 @@ footer {
 .title {
   color: white;
   padding-top: 5%;
+}
+
+.title-row {
+  width: 100%;
+  justify-content: left;
+  padding-left: 0;
 }
 
 .menu-button {
@@ -636,7 +646,7 @@ a:hover {
 .cbic-info,
 .social-icons {
   color: white;
-  padding-left: 5%;
+  /* padding-left: 5%; */
   text-decoration: none !important;
 }
 
